// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settings/Editor initially no warning 1`] = `
<div>
  <div
    class="subtitle"
  >
    Editor
  </div>
  <div>
    mock-select-control id:
    set-default-units
    label:
    Default Units
    url:
    options:
    [{"label":"mm","value":"mm"},{"label":"Inches","value":"inches"}]
    <input
      class="select-control"
      id="set-default-units"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-family
    label:
    Default Font
    url:
    options:
    [{"label":"Arial","value":"Arial"},{"label":"Courier","value":"Courier"},{"label":"蘋果儷細宋","value":"Apple LiSung"}]
    <input
      class="select-control"
      id="set-default-font-family"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-style
    label:
    Default Font Style
    url:
    options:
    [{"label":"Regular","value":"ArialMT"},{"label":"Bold","value":"Arial-BoldMT"},{"label":"Bold Italic","value":"Arial-BoldItalicMT"},{"label":"Italic","value":"Arial-ItalicMT"}]
    <input
      class="select-control"
      id="set-default-font-style"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-model
    label:
    Default Document Setting
    url:
    options:
    [{"label":"beamo","value":"fbm1"},{"label":"Beambox","value":"fbb1b"},{"label":"Beambox Pro","value":"fbb1p"},{"label":"HEXA","value":"fhexa1"},{"label":"HEXA RF","value":"fhx2rf3"},{"label":"Ador","value":"ado1"},{"label":"Promark","value":"fpm1"},{"label":"Lazervida","value":"flv1"},{"label":"Beambox II","value":"fbb2"}]
    <input
      class="select-control"
      id="set-default-model"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide
    label:
    Guides
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-guide"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide-axis
    label:
    Guides Origin
    url:
    options:
    <span
      class="font2"
      style="line-height: 32px; margin-right: 10px;"
    >
      X
    </span>
    <div>
      mock-unit-input id:
      guide-x-input
      unit:
      mm
      min:
      0
      max:
      400
      defaultValue:
      0
      forceUsePropsUnit:
      true
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
    <span
      class="font2"
      style="line-height: 32px; margin-right: 10px;"
    >
      Y
    </span>
    <div>
      mock-unit-input id:
      guide-y-input
      unit:
      mm
      min:
      0
      max:
      375
      defaultValue:
      0
      forceUsePropsUnit:
      true
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    set-bitmap-quality
    label:
    Bitmap Preview Quality
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004494995
    options:
    [{"label":"Low","value":true},{"label":"Normal","value":false}]
    <input
      class="select-control"
      id="set-bitmap-quality"
    />
  </div>
  <div>
    mock-select-control id:
    set-anti-aliasing
    label:
    Anti-Aliasing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004408956
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-anti-aliasing"
    />
  </div>
  <div>
    mock-select-control id:
    set-continuous-drawing
    label:
    Continuous Drawing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004406496
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-continuous-drawing"
    />
  </div>
  <div>
    mock-select-control id:
    set-simplify-clipper-path
    label:
    Optimize the Calculated Path
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004407276
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-simplify-clipper-path"
    />
  </div>
  <div>
    mock-select-control id:
    auto-switch-tab
    label:
    Auto Switch Layer and Object Panel
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="auto-switch-tab"
    />
  </div>
  <div>
    mock-select-control id:
    path-engine
    label:
    Path Calculation Acceleration (Beta)
    url:
    https://support.flux3dp.com/hc/en-us/articles/11146997425039
    options:
    [{"label":"On","value":"swiftray"},{"label":"Off","value":"fluxghost"}]
    <input
      class="select-control"
      id="path-engine"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-custom-backlash
    label:
    Enable Custom Backlash Compensation
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-custom-backlash"
    />
  </div>
</div>
`;

exports[`settings/Editor initially no warning 2`] = `
<div>
  <div
    class="subtitle"
  >
    Editor
  </div>
  <div>
    mock-select-control id:
    set-default-units
    label:
    Default Units
    url:
    options:
    [{"label":"mm","value":"mm"},{"label":"Inches","value":"inches"}]
    <input
      class="select-control"
      id="set-default-units"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-family
    label:
    Default Font
    url:
    options:
    [{"label":"Arial","value":"Arial"},{"label":"Courier","value":"Courier"},{"label":"蘋果儷細宋","value":"Apple LiSung"}]
    <input
      class="select-control"
      id="set-default-font-family"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-style
    label:
    Default Font Style
    url:
    options:
    [{"label":"Light","value":"LiSungLight"}]
    <input
      class="select-control"
      id="set-default-font-style"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-model
    label:
    Default Document Setting
    url:
    options:
    [{"label":"beamo","value":"fbm1"},{"label":"Beambox","value":"fbb1b"},{"label":"Beambox Pro","value":"fbb1p"},{"label":"HEXA","value":"fhexa1"},{"label":"HEXA RF","value":"fhx2rf3"},{"label":"Ador","value":"ado1"},{"label":"Promark","value":"fpm1"},{"label":"Lazervida","value":"flv1"},{"label":"Beambox II","value":"fbb2"}]
    <input
      class="select-control"
      id="set-default-model"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide
    label:
    Guides
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-guide"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide-axis
    label:
    Guides Origin
    url:
    options:
    <span
      class="font2"
      style="line-height: 32px; margin-right: 10px;"
    >
      X
    </span>
    <div>
      mock-unit-input id:
      guide-x-input
      unit:
      mm
      min:
      0
      max:
      400
      defaultValue:
      0
      forceUsePropsUnit:
      true
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
    <span
      class="font2"
      style="line-height: 32px; margin-right: 10px;"
    >
      Y
    </span>
    <div>
      mock-unit-input id:
      guide-y-input
      unit:
      mm
      min:
      0
      max:
      375
      defaultValue:
      0
      forceUsePropsUnit:
      true
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    set-bitmap-quality
    label:
    Bitmap Preview Quality
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004494995
    options:
    [{"label":"Low","value":true},{"label":"Normal","value":false}]
    <input
      class="select-control"
      id="set-bitmap-quality"
    />
  </div>
  <div>
    mock-select-control id:
    set-anti-aliasing
    label:
    Anti-Aliasing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004408956
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-anti-aliasing"
    />
  </div>
  <div>
    mock-select-control id:
    set-continuous-drawing
    label:
    Continuous Drawing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004406496
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-continuous-drawing"
    />
  </div>
  <div>
    mock-select-control id:
    set-simplify-clipper-path
    label:
    Optimize the Calculated Path
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004407276
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-simplify-clipper-path"
    />
  </div>
  <div>
    mock-select-control id:
    auto-switch-tab
    label:
    Auto Switch Layer and Object Panel
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="auto-switch-tab"
    />
  </div>
  <div>
    mock-select-control id:
    path-engine
    label:
    Path Calculation Acceleration (Beta)
    url:
    https://support.flux3dp.com/hc/en-us/articles/11146997425039
    options:
    [{"label":"On","value":"swiftray"},{"label":"Off","value":"fluxghost"}]
    <input
      class="select-control"
      id="path-engine"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-custom-backlash
    label:
    Enable Custom Backlash Compensation
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-custom-backlash"
    />
  </div>
</div>
`;

exports[`settings/Editor initially no warning 3`] = `
<div>
  <div
    class="subtitle"
  >
    Editor
  </div>
  <div>
    mock-select-control id:
    set-default-units
    label:
    Default Units
    url:
    options:
    [{"label":"mm","value":"mm"},{"label":"Inches","value":"inches"}]
    <input
      class="select-control"
      id="set-default-units"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-family
    label:
    Default Font
    url:
    options:
    [{"label":"Arial","value":"Arial"},{"label":"Courier","value":"Courier"},{"label":"蘋果儷細宋","value":"Apple LiSung"}]
    <input
      class="select-control"
      id="set-default-font-family"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-style
    label:
    Default Font Style
    url:
    options:
    [{"label":"Regular","value":"Regular"},{"label":"Bold","value":"Courier-Bold"},{"label":"Bold Oblique","value":"Courier-BoldOblique"},{"label":"Oblique","value":"Courier-Oblique"}]
    <input
      class="select-control"
      id="set-default-font-style"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-model
    label:
    Default Document Setting
    url:
    options:
    [{"label":"beamo","value":"fbm1"},{"label":"Beambox","value":"fbb1b"},{"label":"Beambox Pro","value":"fbb1p"},{"label":"HEXA","value":"fhexa1"},{"label":"HEXA RF","value":"fhx2rf3"},{"label":"Ador","value":"ado1"},{"label":"Promark","value":"fpm1"},{"label":"Lazervida","value":"flv1"},{"label":"Beambox II","value":"fbb2"}]
    <input
      class="select-control"
      id="set-default-model"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide
    label:
    Guides
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-guide"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide-axis
    label:
    Guides Origin
    url:
    options:
    <span
      class="font2"
      style="line-height: 32px; margin-right: 10px;"
    >
      X
    </span>
    <div>
      mock-unit-input id:
      guide-x-input
      unit:
      mm
      min:
      0
      max:
      400
      defaultValue:
      0
      forceUsePropsUnit:
      true
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
    <span
      class="font2"
      style="line-height: 32px; margin-right: 10px;"
    >
      Y
    </span>
    <div>
      mock-unit-input id:
      guide-y-input
      unit:
      mm
      min:
      0
      max:
      375
      defaultValue:
      0
      forceUsePropsUnit:
      true
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    set-bitmap-quality
    label:
    Bitmap Preview Quality
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004494995
    options:
    [{"label":"Low","value":true},{"label":"Normal","value":false}]
    <input
      class="select-control"
      id="set-bitmap-quality"
    />
  </div>
  <div>
    mock-select-control id:
    set-anti-aliasing
    label:
    Anti-Aliasing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004408956
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-anti-aliasing"
    />
  </div>
  <div>
    mock-select-control id:
    set-continuous-drawing
    label:
    Continuous Drawing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004406496
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-continuous-drawing"
    />
  </div>
  <div>
    mock-select-control id:
    set-simplify-clipper-path
    label:
    Optimize the Calculated Path
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004407276
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-simplify-clipper-path"
    />
  </div>
  <div>
    mock-select-control id:
    auto-switch-tab
    label:
    Auto Switch Layer and Object Panel
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="auto-switch-tab"
    />
  </div>
  <div>
    mock-select-control id:
    path-engine
    label:
    Path Calculation Acceleration (Beta)
    url:
    https://support.flux3dp.com/hc/en-us/articles/11146997425039
    options:
    [{"label":"On","value":"swiftray"},{"label":"Off","value":"fluxghost"}]
    <input
      class="select-control"
      id="path-engine"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-custom-backlash
    label:
    Enable Custom Backlash Compensation
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-custom-backlash"
    />
  </div>
</div>
`;

exports[`settings/Editor initially no warning 4`] = `
<div>
  <div
    class="subtitle"
  >
    Editor
  </div>
  <div>
    mock-select-control id:
    set-default-units
    label:
    Default Units
    url:
    options:
    [{"label":"mm","value":"mm"},{"label":"Inches","value":"inches"}]
    <input
      class="select-control"
      id="set-default-units"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-family
    label:
    Default Font
    url:
    options:
    [{"label":"Arial","value":"Arial"},{"label":"Courier","value":"Courier"},{"label":"蘋果儷細宋","value":"Apple LiSung"}]
    <input
      class="select-control"
      id="set-default-font-family"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-font-style
    label:
    Default Font Style
    url:
    options:
    [{"label":"Regular","value":"Regular"},{"label":"Bold","value":"Courier-Bold"},{"label":"Bold Oblique","value":"Courier-BoldOblique"},{"label":"Oblique","value":"Courier-Oblique"}]
    <input
      class="select-control"
      id="set-default-font-style"
    />
  </div>
  <div>
    mock-select-control id:
    set-default-model
    label:
    Default Document Setting
    url:
    options:
    [{"label":"beamo","value":"fbm1"},{"label":"Beambox","value":"fbb1b"},{"label":"Beambox Pro","value":"fbb1p"},{"label":"HEXA","value":"fhexa1"},{"label":"HEXA RF","value":"fhx2rf3"},{"label":"Ador","value":"ado1"},{"label":"Promark","value":"fpm1"},{"label":"Lazervida","value":"flv1"},{"label":"Beambox II","value":"fbb2"}]
    <input
      class="select-control"
      id="set-default-model"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide
    label:
    Guides
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-guide"
    />
  </div>
  <div>
    mock-select-control id:
    set-guide-axis
    label:
    Guides Origin
    url:
    options:
    <span
      class="font2"
      style="line-height: 32px; margin-right: 10px;"
    >
      X
    </span>
    <div>
      mock-unit-input id:
      guide-x-input
      unit:
      mm
      min:
      0
      max:
      400
      defaultValue:
      0
      forceUsePropsUnit:
      true
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
    <span
      class="font2"
      style="line-height: 32px; margin-right: 10px;"
    >
      Y
    </span>
    <div>
      mock-unit-input id:
      guide-y-input
      unit:
      mm
      min:
      0
      max:
      375
      defaultValue:
      0
      forceUsePropsUnit:
      true
      className:
      {"half":true}
      <input
        class="unit-input"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    set-bitmap-quality
    label:
    Bitmap Preview Quality
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004494995
    options:
    [{"label":"Low","value":true},{"label":"Normal","value":false}]
    <input
      class="select-control"
      id="set-bitmap-quality"
    />
  </div>
  <div>
    mock-select-control id:
    set-anti-aliasing
    label:
    Anti-Aliasing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004408956
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-anti-aliasing"
    />
  </div>
  <div>
    mock-select-control id:
    set-continuous-drawing
    label:
    Continuous Drawing
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004406496
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-continuous-drawing"
    />
  </div>
  <div>
    mock-select-control id:
    set-simplify-clipper-path
    label:
    Optimize the Calculated Path
    url:
    https://support.flux3dp.com/hc/en-us/articles/360004407276
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-simplify-clipper-path"
    />
  </div>
  <div>
    mock-select-control id:
    auto-switch-tab
    label:
    Auto Switch Layer and Object Panel
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="auto-switch-tab"
    />
  </div>
  <div>
    mock-select-control id:
    path-engine
    label:
    Path Calculation Acceleration (Beta)
    url:
    https://support.flux3dp.com/hc/en-us/articles/11146997425039
    options:
    [{"label":"On","value":"swiftray"},{"label":"Off","value":"fluxghost"}]
    <input
      class="select-control"
      id="path-engine"
    />
  </div>
  <div>
    mock-select-control id:
    set-enable-custom-backlash
    label:
    Enable Custom Backlash Compensation
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-enable-custom-backlash"
    />
  </div>
</div>
`;
